[gd_scene load_steps=4 format=2]

[ext_resource path="res://characters/Character.tscn" type="PackedScene" id=1]
[ext_resource path="res://characters/npc/npc.gd" type="Script" id=2]
[ext_resource path="res://characters/npc/gtfo.png" type="Texture" id=3]

[node name="Npc" index="0" instance=ExtResource( 1 )]

script = ExtResource( 2 )
patrol_distance = 200

[node name="Health" parent="." index="2"]

editor/display_folded = true

[node name="Area2D" type="Area2D" parent="." index="3"]

position = Vector2( -2.29285, -1.22653 )
scale = Vector2( 2.4439, 1.61846 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
__meta__ = {
"_edit_group_": true
}

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D" index="0"]

position = Vector2( -2.28383, -6.19784 )
build_mode = 0
polygon = PoolVector2Array( -54.8819, -137.008, 77.7677, -138.903, 134.16, -74.6033, 134.569, 47.7351, 65.4198, 107.651, -61.8634, 107.651, -120.351, 42.7922, -118.714, -77.6927 )

[node name="CollisionShape2D" parent="." index="4"]

position = Vector2( 0.902145, -3.02274 )
scale = Vector2( 0.700141, 0.520544 )

[node name="BodyPivot" parent="." index="5"]

editor/display_folded = false

[node name="WeaponPivot" parent="." index="6"]

editor/display_folded = true

[node name="Timer" type="Timer" parent="." index="7"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="Wesh" type="Popup" parent="." index="9"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
popup_exclusive = false
_sections_unfolded = [ "Anchor", "Pause", "Popup" ]
__meta__ = {
"_edit_group_": true
}

[node name="gtfo" type="Sprite" parent="Wesh" index="0"]

position = Vector2( -503.543, -197.955 )
scale = Vector2( 0.3, 0.3 )
z_index = 2
texture = ExtResource( 3 )
centered = false
_sections_unfolded = [ "Animation", "Material", "Offset", "Pause", "Region", "Transform", "Visibility", "Z Index" ]

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]

[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]


